// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create web card use real world sample 1`] = `
"[[瑞典央行數字貨幣白皮書]]
[*]
目前對[[數字貨幣]]概念最為清楚的說明 %LFL
多數國家僅有大致框架 %pCk
瑞典已是零現金存在，推行試用數字貨幣阻礙較小 %muf

=== [[瑞典央行數字貨幣白皮書]] ===

[錢的定義]
實質紙幣及硬幣銀行借貸：支撐經濟發展要素(央行[[貨幣政策]]之一是調節利息，以調節銀行借貸力度) %lmb

[[數字貨幣]]
[*]
紙幣及硬幣的替代品 %jls
[[央行]]發行時賦予唯一token，用以追蹤用戶間的移轉 %fsx
央行是數字貨幣唯一發行者 %x4P
需要手機、磁卡等中介 %4pw
從發行到最終持有者皆可追蹤 %nxx
央行提供[[利息]](得控制現金流動性) %VJD
[-]
離線轉帳支付功能需被克服 %sUO
衝擊現有銀行營利模式(大眾趨向將銀行存款轉為安全性更高的數字貨幣，銀行則失去存款) %XLT
央行將數字貨幣再借貸予銀行，以補回銀行存款，同時透過對銀行的借貸力度控制銀行對外借貸力度 %fBY
[[金融危機]]下，更容易發生銀行[[擠兌]] %hHY"
`;

exports[`Create web card use real world sample 2`] = `
"$TTCF
[*]
2020以[[SPAC]]合併方式上市 %RSl
有機原材料冷凍速食公司 %vfc
宣布研發[[人造肉]] %kRz
近三年營收增長率66%，2021降至50% %P9a
產品入住北美大型超市，國際市場擴張中 %KUL
在義大利擁有獨立農場，加速歐洲市場 %yP8
[vs]
$BYND %hPA
未來三年市盈率約為$BYND1/3，EV/sales低50%以上 %wZ8
[+]
發展速度快 %11B
已開始盈利 %ZxC
估值合理 %Su5
[[IPO]]後現金超過整體負債，財務狀況健康 %8pf
[-]
缺少護城河 %h5f
與傳統食品公司無明顯區別 %H7m
人造肉起步較晚 %LCT
2020第三季損失超過$300萬，包含上市相關費用支出$480萬 %k9z
各項利潤率下降 <- 行銷及運貨/存貨運送成本增加所致 %dln

$AI
[*]
[[微軟]]為[[IPO]]投資者之一 %2Wr
[[人工智能]]相關[[SaaS]] %nAo
開發大規模[[AI]]預測分析及[[IoT]]相關應用程序 %7ic
應用範圍幾乎覆蓋所有產業 %e0H
產品：AI Suite、AI Aplication、Ex Machina %JDi
主要客戶： %fqx
工業企業 $MMM、$RTX %YXM
能源公司 $SHLX、$DUK %bCb
美國國防部及空軍 %XEn
收入來源：86%訂閱費、14%服務費 %kM9
[vs]
$PLTR %OwV
皆為[[Saas]]類 %Nm0
產品皆以[[大數據]]分析、人工智能、[[機器學習]]為基礎 %yxB
皆具反洗錢及詐欺識別功能 %Zd0
皆服務大型企業、美國政府 %XbG
[+]
營收增長快 %GKz
資產負債表健康 %DMz
[-]
2020營收增長停滯(可能受疫情影響) %s8k
高估值 %Xf2
[?] <觀望> 不了解該領域、高估值，但仍有潛力 %IOi

$ROOT
[*]
[[保險科技]]公司 %2Jg
利用駕駛測試程式收集駕駛習慣數據並予以評分，拒絕高風險客戶 %ayw
分析數據以優化定價模型並降低賠付損失 %Eb5
第三季開始將70%保費轉移至再保險(損益大幅下降原因) %qPo
[vs]
$LMND %M1X
皆利用[[AI]]和[[大數據]]分析降低人工成本和[[保險]]賠付損失 %Qu9
客戶業務皆透過APP完成 %gnC
業務領域：$LMND 房屋、租客、寵物保險 vs $ROOT 主要為汽車保險，兼有租客保險 %0ai
各項增長率雖仍較$LMND差，但絕對金額較$LMND大，相對估值更為合理 %FJy
[+]
2020總保險合同數量、有效保費、直接保費大幅增長，賠付率降低 %kDr
透過收購[[SPAC]]獲取美國48州提供[[汽車保險]]之許可，加快擴張速度 %6BJ
[-]
[[IPO]]後股價下跌 %3bw"
`;

exports[`Create web card use real world sample 3`] = `
"[[十倍股]]
將具潛力的股票組成投資組合
股聖的投資方式
廣撒網，撈大魚
[選股方式]
市值$2,000億以下 <- 市值太大的知名企業上漲空間有限 %16X
不能太新 <-剛上市容易出現市值虛高，等待半年冷靜期 %6B8
賽道好 %8Wx
未來利潤率 %XSV

$TAL
[?] <買> %bFO
[-]
政府加大行業整頓力度 %65p
中小型科技股走弱 %64u
[+]
賽道好 %VsR
政府出手台高門檻，提升未來市場集中度，長期利好 %4w7
[[教育]]行業更加規範 %5cn
中國高考制度下，家長對教育投資力度增加 %MtI

$PDD
[最新]
[[$PDD創始人黃崢宣布離職]] %Gb3
使股價低迷 %2sc
傳聞因盜版商品而跑路 %Aea
仍為最大股東，三年內不出讓股份 %zKX
[-]
平台充斥盜版商品 %iHc
[+]
盜版商品視為平台升級歷程，如早期淘寶逐步升級為天貓 %4FF
看好店商平台賽道 %qcD
[?]<買> 小倉位投資 %6hg

$BEKE
[?] <買> %Wrb
[+]
具[[房地產]]競爭優勢 <- 線上、線下能力強，幾乎無對手 %ayx
賽道、未來利潤好 %HUY

$ZOOM
[?] <買> %D6V
[+]
企業文化優良 %vjf
疫情持續下仍有增漲空間 %NYJ

$ARKG
[+]
看好[[基因]]產業賽道 %ve6
投資人不了解該行業，選擇[[ETF]]分散風險 %NuP
[?]<買> 小倉位投資 %PVl"
`;

exports[`Create web card use real world sample 4`] = `
"$BTC
[最新]
[[$TSLA購入15億美元比特幣]] -> 當日$TSLA股價爆漲20% %tPQ
[*]
無基本面 -> 無法估值 %QEk
非官方發行，應用[[區塊鍊]]技術的[[數字貨幣]] %kSP
不可篡改、不可偽造 %enF
沒有人可控制[[比特幣]]的發行量和流通量 %GG2
發行數量固定為2,100萬個單位 %XS4
存在數量可能下降 %YQv
20%因忘記密碼而消失 %LZk
預計2-4%逐年消失 -> 具天然[[通縮]]性質 %YmQ
[+]
$PYPL, $SQ, $MA 陸續開通[[加密貨幣]]支付功能 %g4h
[[Cathie Wood]] 認為[[比特幣]]可達$50萬一幣 %Mzd
[[避險]]性質優於傳統避險產品([[黃金]]、藝術品、[[房地產]]) %qsK
流通性強 %waI
轉帳交易便利 %KHd
近十年的接受度增加 %cvB
部分發展中國家考慮將[[比特幣]]加入[[外匯儲備]] %7bN
比[[主權貨幣]]更安全及更方便流通 %0mv
[[機構投資者]]陸續引入 <- 機構比散戶更需要避險 %oVU
生活中應用的可能性增加 %2v0
被視為電子黃金 <- 2021年市場最大風險是[[通貨膨脹]]，疫情下各主要經濟體的[[央行]]放水，長期[[實質利率]]、[[債券收益率]]低 -> 主權貨幣[[貶值]]風險，投資人尋找投資替代品 %NcS
[-]
[[散戶]]占大多數(機構占比小於1%)，價格受投資者情緒波動 -> 散戶過多容易出現價格背離價值 %vFO
漲幅大但行業發展速度慢 %Zhj
[[區塊鍊]]行業門檻高、用戶數量少 %Q6t
提供[[數字貨幣]]交易服務的公司並未賺錢 %UBl
缺少配套措施 %72h
[未來發展]
長期價值高但過程慢 %AEm
[?]
保密性和交易流通性值得懷疑(保密性衝擊各國監管系統，可能無法大量流通) %DE4
[?]<買> 少量買入，做好短期回調的準備，看好長期 %9Qu
[如何投資]
直接購買比特幣 %W4U
券商：[[Roinhood]] %JnY
支付平台：$PYPL %Kx5
專業數字貨幣平台：$COIN %5qr
投資[[信託基金]]$GBTC ($GBTC是唯一合法跟蹤[[比特幣]]的被動投資機構，存在議價風險) %zFc
投資持有[[比特幣]]的公司 %DOy"
`;

exports[`Create web card use real world sample 5`] = `
"[[美股]]
[最新]
美國三大銀行公布財報 %OhW
$JPM未受到[[Archegos爆倉]]影響，收入比去年同期增長47% %IVQ
$WFC 2021第一季度收入增長14%，利潤增長近5倍 %hKs
$GS釋放大量現金，利潤翻7倍 %q0Q
美國[[CPI]]及[[PPI]]數據創新高，意味[[通膨]]實際發生 %6tq
[[強生疫苗可能和血栓有關]] -> FDA暫停強生疫苗接種，影響投資者情緒 (疫苗=經濟復甦) %0Ti

$COIN
[*]
[[IPO]]上市，發行股價$250，當日漲幅31%，市場並未狂熱 %Zbd
多種[[加密貨幣]]包含[[比特幣]]的交易平台 %fYX
創始人Brian Armstrongm願景：創造經濟活動自由 %DH9
每季度交易量$3,350億 %B0f
支持超過100種貨幣交易 %vZW
認證用戶超過5,600萬 %Z9m
[商業模式]
[[加密貨幣]]交易服務費 %Pib
[[加密貨幣]]托存佣金 %dlX
信用卡服務費(與$V合作) %Wwu
提供研發工具環境，收取訪問費 %oPp
借貸[[利息]] %Elw
[+]
2020全年營收增長率大於200% %0mS
具大量運作基金(現金流來看有$10.6億現金和約當現金) %z4O
[-]
出金時須先轉為實質貨幣 %5Bg
和[[比特幣]]的風險綁在一起 %ScB
投資加密貨幣的風險比一般投資更大 %19S
[[數字貨幣]]的問世將衝擊[[比特幣]]和影響相關機構{{中國已在試行，[[美聯儲]]考慮發行}} %954
[?]
[[加密貨幣]]安全嗎? %8nJ
[[Janet Yallen]] 極度低效，投機性高 %oU1
前中情局局長：非常安全 %1S6
$COIN CEO Brian 國家監管是最大風險 %QOL
美國[[聯儲局]]主席 [[Jerome Powell]]：投機工具 %n58
[?]<觀望> 不排除參與投機，但剛上市股價波動大，保守等待完整K線圖再照機會買入 %ABF

$XPEV
[最新]
發布第三台量產車P5 %LhO
[vs]
$XPEV P5 vs $TSLA model 3 (M3) %dME
傳感器P5：32個 vs M3：22個 %vZD
P5採用Xpilot3.5[[自動駕駛輔助系統]] %V7V
P5水平視角120度、探測距離150米 %kNd
具備城市[[NGP自動導航輔助駕駛]]能力 %Xzv
[+]
年底可交付使用 %u33
國際版將出口到歐盟國家 %AUg
中國為[[電動車]]最大的消費市場，具本地品牌優勢 %S4Z
技術、性能、質量、可靠程度提高 %Ge8
飛行汽車計畫 %cc2
2020毛利率轉正，第四季交付量同比增漲303%，年總收入同比增長151.8 %WPp
 [?]<買> 逢低買入，長期持有 %7iY

$YQ
[?]<觀望> 上漲過程遇到技術面ENE上軌或中軌不過短線可高拋低攜，長線則等待磨底震盪結束後股價上漲 %c88

$WISH
[?]<觀望> %uLZ"
`;

exports[`Create web card use real world sample 6`] = `
"[[美股]]
[最新]
[[PPI]]創九年半新高，[[國債收益率]]攀升 %ZBP
[[通膨]]問題下，股市投資相對[[保值]] %IFO
前所未有的[[QE]]力度 -> 投資人緊張 %x0s
市場暫時跌不下來 %cUT
[[美聯儲]]持續支持股市 %GGQ
財報即將公布 %buy
[[Powell]]宣布今年不加息 %jFr
$BX副主席Byron Wien 認為短線看漲 %A9X
透過[[通膨]]消化[[Funny Money]] %bb6
股市保障美國穩定 %39H
[[芯片短缺]]引起白宮重視 %N6z
汽車製造產業無法生產、交付 -> 影響財報及股價 %eDk

$NUAN
[最新]
[[$MSFT收購$NUAN]] %tw0
收購價格$197億 %LMi
[*]
[[人工智能]]和[[語言識別技術]]公司 %ARg
$AAPL Siri背後的聲控公司 %sfd
產品包含[[NLU]]([[自然語言處理技術]])、[[OCR]]([[文字識別技術]])、[[語言合成]]、[[語言識別]]、PDF[[圖像處理]]，目前市面上最先進的語音識別軟體[[Naturally Speaking]]就是$NUAN的產品 %qrp
技術應用至[[醫療]]領域 %DPx
[+]
研發能力強{{4,000多項專利和知識產權、識別超過86種語言和方言、[[語音合成]]39種以上語言、[[圖像處理技術]]支持100種以上語言}} %wz4
市場覆蓋範圍大 %7C8
應用領域廣 %RyV
29年歷史 %xuE
世界認可的領先人工智能技術 %tR2
有$MSFT強大背景 %nR1
[-]
淨利率與投資回報率為負數 %4mG
現金不寬裕{{科技公司現金流因產業特性通常現金流困難}} %FrQ
收購方$MSFT財務支出上升、利潤下降、股價承壓 %xzW
被收購公司$NUAN仍處虧損 %P2h
經營失敗的可能風險 %D4s
[vs]
$GOOG %iVv
皆有[[語音識別]]和[[翻譯]] %0n8
[[Google Brian]]用於安卓語音識別控件中 %6A5
$GOOG研發、創新、營銷能力強 %04x
[?]<買> %tD8"
`;

exports[`Create web card use real world sample 7`] = `
"$COIN
[*]
[[DPO]]直接上市，參考價$250，開盤後衝高回落 %EP4
虛擬貨幣交易平台 %QEs
5,600萬認證用戶 %RGv
估值多來自對[[數字貨幣]]爆漲的透支 <- [[比特幣]]今年漲至$6萬 %gfw
主要收入來源佣金佔90% %jht
[[加密資產]]達$2,230億，佔整體[[加密貨幣]]市場11.3% %eTs
[vs]
$FUTU %46E
$FUTU大漲後市值$200多億 vs $COIN一上市市值將近$1,000億 %Nh3
[[Binance]] %gz3
最大加密貨幣交易所 %KQk
[-]
[[MTU]]僅有610萬 %y1D
受[[加密貨幣]]暴漲暴跌週期影響，業績不穩定 %8Nz
傳統價值投資派不看好 %Uko
手續費競爭風險 %3sy
[+]
[[ARK]]、[[Elon Musk]] 大舉買入 %nUR
交易所類似賭場，即使不看好[[比特幣]]，但只要有交易就會有佣金收入 %fUP
[?]<觀望> %IZd"
`;

exports[`Create web card use real world sample 8`] = `
"$FB
[*]
[[社交媒體]]市場 %x64
[收購]
2012年以$10億收購[[Instegram]] %It0
2014年190億[[whatsapp]] %vvv
[-]
話題多爭議大 %8L5
[+]
財報未受[[廣告商集體杯葛$FB]]事件影響 %yte
[[電子商務]]興起，廣告業競爭比[[傳統媒體]]更有優勢 %XqY
[最新]
[[反壟斷調查]] %vel
若判定拆分，依用戶數量估算，$FB、[[Instegram]]、[[whatsapp]]市值皆超過千億，對股東而言利大於弊 %0W4
[[大規模封號行為]] %HSv
引發公眾反感及監管重視 %ehd
[?]<買> 逢低加倉 %CAG


[[VS: $ICE vs $NDAQ vs, $CME]]
$ICE年營收較$NDAQ, $CME高
$NDAQ年營收增長較$ICE, $CME高
市值$CME市值最高

$ICE
[*]
早期經營能源期貨產品 %Rmh
2013收購[[NYSE]]，成為世界第二大交易平台 %sjL
最大交易產品：[[布侖特原油期貨合約]] %5Rd
[收入來源]
股票期貨交易50% %vQj
數據服務42% %wKu
掛牌業務8% %iNV
[vs]
$ICE vs $NDAQ vs $CME %PeB
$ICE年營收較$NDAQ, $CME高 %iCo
$NDAQ年營收增長較$ICE, $CME高 %wjk
市值$CME市值最高 %R8V
[+]
盈利能力強 %2g3
現金流足夠 %03D
護城河深 %SjK
[-]
原油交易量萎縮 %VD4
債務比高 %Szr
[?]<買> %riN

$NDAQ
[*]
[[Nasdaq]]交易所母公司 %fDw
[收入來源]
市場服務36% %D3F
信息服務33% %njK
上司公司服務19% %oRC
與其他交易所合作收入12% %LcL
[+]
營收增長超過20% %Uip
大量資金湧入科技股 %GHO
盈利能力強 %ZfK
現金流足夠 %Z8l
護城河深 %uBk
[?]<買> 估值最為划算，大量資金流入股市有利中短期持有 %Sn8

$CME
[*]
各種商品交易 %j5q
[+]
產品多樣性 %lfX
盈利能力強 %HfS
現金多，債務少 %ax6
現金流足夠 %SE2
護城河深 %Tim
分紅安全評分96分 %2WN
隱藏特別分紅 %ZbL
[-]
美聯儲降息 -> 市場波動降低 -> 營收下降 %psb
[?]<買> 長期持有 %jeq"
`;

exports[`Create web card use real world sample 9`] = `
"$TSM
[最新]
[[全球芯片短缺]] %21b
2020疫情後市場對[[電子設備]]需求增加 %ljx
2021日本大地震、德國暴風雪、台灣缺水 %ykm
[[台灣缺水]] %26d
[[芯片]]代工廠產能困境 <- 生產過程需使用超純水洗淨汙染源 %PPk
$TSM花費NT$2億預定上百輛水車 %5aI
[-]
台灣缺水以致產能緊張 -> 盈利預期下調 -> 短期股價利空下跌 %v04
政治風險 %XAO
股價受[[$INTC建廠]]消息下跌 %69S
[+]
[[晶圓代工]]技術世界領先 %n71
[[半導體]]未來發展的芯片需求將會更大 %IL1
[?]
$TSM是否能度過產能問題，解決後是否能突破營收紀錄? %Ixw
缺水問題短期利空，遲早會解決 %U3l
$TSM和[[Samsung]]是能代工[[5奈米]]或更高級[[芯片]]的唯二廠商 %IWm
$AAPL佔$TSM [[5奈米]]產能53% %TFm
各芯片大廠搶$TSM產能 -> 第二季度[[溢價]]拍賣[[剩餘產能]]，價格提高15-20% %89L
只要有半導體需求，不擔心$TSM短期產能及未來營收 %6Oo
[vs]
[[Samsung]] %peD
$TSM市佔率56% vs [[Samsung]]市佔率18% %4H1
[?]<買> 近期股價利空下跌，長期看好，逢低買入 %MvO


[[全球芯片短缺]]
[影響]
[[芯片]]短缺造成[[汽車製造業]]減產或停產 <- 一輛車需要幾十種[[MCU]]([[芯片]]) %nqa
家用電器也使用[[MCU]] %x2X
未來[[自動駕駛]]和[[人工智能]]發展，[[芯片]]在[[汽車製造業]]的需求將更大 %7BD
[?]
[[汽車製造業]]為什麼會極度缺乏[[芯片]]? %iuP
過去[[晶圓代工]]受到欺壓，分別轉為製造其他項目，[[芯片]]生產則轉移至$TSM -> $TSM現佔 70%全球汽車[[MCU]][[芯片]]市場 %ZDW
$TSM往高端電子設備發展{{尤其疫情後，市場對高端墊子產品需求暴增}} -> $TSM的汽車[[MCU]][[芯片]]產能擴張緩慢 %fSZ
歐洲疫情爆發，生產壓力跑到$TSM，$TSM又遇[[台灣缺水]][[產能問題]] %bmP"
`;

exports[`Create web card use real world sample 10`] = `
"[[SPAC]]
[*]
無具體業務 %Ql4
上市目的：收購合併另一家想要上市的公司 %Vmb
也稱[[Blank Check Company]]([[空頭支票公司]]) %taS
發行價$10(也有個別情況) %g9c
兩年內未完成合併或收購，需將資金返還股東 %sD8
發行[[Unit]]而非股票 %SIg
[流程]
[[IPO]]募集資金 -> [[信託]]帳戶 -> 兩年時間尋找目標公司 -> 發布合作協議 -> 股東投票通過 -> 合併成功 -> 取得新的股票代碼 -> 閉鎖期(特定期限或到達某股價) %Of8
[+]
比傳統[[IPO]]方式上市更簡單 %Zvb
目前沒有破產或詐欺案例 %IxA
政府監管嚴 %Z7t
[投資策略]
已發表合併協議或有合併傳聞的[[SPAC]] %fx8
尋找適當買入時機 %xyV
評估被收購公司的基本面和合併估值 %1Lu
未有合併消息的[[SPAC]]，代替現金儲備 %sB7
管理階層能力和背景，如：[[Bill Ackman]]的$PSTH、[[Chamath]]的$IPOD, $IPOE, $IPOF %HJ6
資產規模大於$5億 %Dpg
目標合併行業：[[可再生能源]]、[[電動車]]、[[金融科技]]等熱門行業 %9ju
[[IPO]]日期：避免超過一年快到兩年期限 %itt
[訊息網站]
SPACTRACK %vIl


[[PIPE]]
[*]
[[SPAC]]公司為確保資金足夠以完成合併，找特殊投資者募集額外資金 %fVA
對[[SPAC]]投資者沒有影響 %R7S

[[Unit]]
[*]
[[Unit]] = 正股 + 部分[[Warrant]]，[[IPO]]52天後可以選擇分離 %DWp

[[Warrant]]
[*]
[[衍生性金融商品]] %Bcy
有效期五年，但公司可強制贖回或執行 %n2i
行權日期：合併完成30天或[[SPAC]][[IPO]]一年後(取較晚日期) %7eP
內在價值 = 當前股價 - 行權價格 %0cp
[[槓桿作用]] -> 價格波動大 %afY
[vs]
[[期權]] %WMW
[[Warrant]]執行時從公司直接購入股票 vs [[期權]]執行時從其他投資人購入股票 %owE
[-]
兩年內未完成合併，[[Warrant]]價值為0 %GXK

$CRHC
[創始人]
Gary Cohn：白宮經濟顧問，曾任$GS主席、COO %ofl
Clifton Robbins %HpV
[*]
2020年9月[[IPO]]募集資金$7.2億 %0HK
合併目標行業 %pxk
科技 %QVY
軟件 %jkY
[[金融科技]] %Vzm
[+]
管理階層值得信賴 %jqc
資產規模大 %pZ3
目標行業發展趨勢好 %08A
[?]<買> %6RC

$DMYI
[*]
[[IPO]]募集資金$2.7億 %0X6
[+]
[[dMY]]前2支[[SPAC]]股票成功達成合併協議，且股票上漲 %4ej
[-]
資產規模小 %a3A
[?]<買> 看好母公司成功經驗 %yw5"
`;

exports[`Create web card use real world sample 11`] = `
"[[SPAC]]
[用[[SPAC]]股票代替現金]
疫後情三大指數創新高
2020[[IPO]]市場火爆，[[SPAC]]融資金額高過傳統[[IPO]]
[[美聯儲]]印錢 -> 美元貶值 -> 持有現金不如股市投資
[[[SPAC]]各階段股價]
尋找目標公司：$10
宣布合併意向：依夢想變動
完成合併：依基本面、華爾街評估
[-]
投機性大 %PiN
股價波動大 %uRv
[建議]
分批建倉 %vka
避免盲目追高 %psS
目標行業 %Kif
[?]<買>@10.5 買入管理背景很強的[[SPAC]]股票 %7Tp"
`;

exports[`Create web card use real world sample 12`] = `
"$ABBV
[*]
被[[低估]]的[[生技公司]] %Pyy
前身是$ABT醫藥事業部門 %QoC
2011自$ABT拆分出 %bbE
打造研發導向的[[生物醫藥]]公司 %P0i
$ABT專做營養品和檢測儀器，市場較不競爭 %Xgk
$ABT想將快過期或已過期的專利拆分出去 %paQ
2013上市 %Nju
[產品]
Humira (anti-TNF) %U4b
藥王 %J5c
已上市20年，維持高營收 %QoI
473個專利 %Cie
類似藥物至少在2023年以後銷售 %mOW
擴張適應症，cover幾乎所有免疫相關 %eo4
kaletra, HIV：抗病毒 %twg
Duodopa：神經科 %Pt4
C型肝炎產品 %wQp
Mavyret：成功分攤Humira營收責任 %gUv
取代Humira %d2n
Rinvoq %rgK
skyrizi %Db3
Apoptosis pathway pipeline %QOT
Venetoclax (已上市) %bb4
Navitoclax %ebH
[chairman]
Richard_A._Gonzalez %oo4
分散公司營收組成 %Iau
Humira防衛和專利戰 %GuB
找到新pillars，將公司打造成研發型公司 %kie
[發展]
擴大Pipeline和研發能力(尤其腫瘤、免疫、罕見疾病產品) %oIK
向外尋找併購標的 %UP6
[-]
起步不被看好 %Wo2
銷售七成以上來自專利快過期的藥物(大部分Humira) %LSU
初期銷售導向 %dVf
[+]
2015成功併購$PCYC %ocZ
成功開發取代Humira的下一代產品Rinvoq及skyrizi %k8W
免疫pipeline的發展 %C90
預計2021成為全球第三大[[藥廠]] %TEU
2020成功收購$AGN，彌補$ABBV對神經領域不足 %vNU
轉型股價持續創新高 %PMm
[[ARK]]於2021/2開倉 %aLd
[?]<買> %G2b"
`;

exports[`Create web card use real world sample 13`] = `
"[[線上博彩]]
[現況]
美國2018年5月取消商業運動博彩禁令 %9mZ
共23個州合法化[[運動博彩]] %m2V
只有15個州合法化[[線上運動博彩]] %V4X
只有6個州合法[[線上博彩]][[igaming]] %C40
滲透率低，產業潛力大 %Uv2
[+]
疫情下實體博彩產業營收下滑，促成線上發展 %4xL
疫情後可持續性高 %BrP
[[Morgan Stanley]] 到2025年為止，[[運動博彩]]產業產值將有75%來自線上平台 %sM6
[[Action Network]] 預估全美96%州在2025年能合法化[[線上運動博彩]] %Ojt
[-]
競爭激烈 <- 技術壁壘低 %b1c
政府監管 %E8S

$DKNG
[*]
純[[線上博彩]]平台 %1Og
[[ARK]]概念股 %pXw
Michael Jordon投資並擔任顧問 %3iD
主產品是[[運動博彩]]項目 %y23
尚處早期擴張期 %7He
[+]
營收成長快速 %2GL
預計未來營收能維持高年複合成長率 %7PH
上市後狂漲 %cF6
[-]
市場競爭激烈 %GhX
高額行銷費用、政府稅收、牌照費 %yTx
2020/12仍處虧損狀態 %z4W

[[BetMGM]]
[*]
$MGM與英國線上博彩公司合作的線上博彩平台 %O28
母公司$MGM %TsK
疫情復甦股 %yNc
[[線上博彩]]話題 %8SR

[[pointbet]]
[*]
澳洲博彩公司 %uGa
2015開發 %4b6
2018進軍美國 %ver

$BETZ
[*]
[[運動博彩]]與[[線上博彩]]的[[ETF]] %zzW
2020年6月成立 %csc
投資地域分散 %3eh
也投資支持[[博彩]]的[[B2B]]技術公司 %431
[+]
看好整體[[博彩]]產業下的投資選擇 %DEy
上市後股價穩定成長，波動較小 %2A2"
`;

exports[`Create web card use real world sample 14`] = `
"[[選股邏輯]]
easy decency：生活接觸，主觀感覺良好的品牌公司

$UPST
[*]
中小型[[消費貸款]]信用分提供商 %Oqn
消費者refinancing的途徑 %ABy
2019轉型，輕資產化： %2B1
放棄作為借貸人的角色 %Lfy
類似中國[[螞蟻借唄]] %uAi
提供信用分，勾結銀行和借款人 %TO4
規避政府監管{{本身非借款人，不需要銀行牌照}} %KAa
透過借款人消費紀錄而非當地收入提供授信依據{{傳統借貸模式下非本地收入的高收入者可能無法取得授信}} %9FJ
[+]
年報發布後股價上升 %Dq1
進軍車貸市場 %7BX
[-]
市場拓展的成本高 -> 未來利潤可能下降 %sjM
[?]<觀望> 撤出本金，以賺到的錢長期持有觀望 %rW2"
`;

exports[`Create web card use real world sample 15`] = `
"[[旅遊業]]
[*]
相關：[[郵輪業]]、[[航空業]]、[[酒店業]] %S6M
[最新]
疫情控制後將報復性增長 %aT0
旅遊相關股近期已有漲幅 %UuV
[潛力]
尚未回到疫情前水平 %9ou
經濟復甦存在不確定性 %G6i

[[郵輪業]]
[+]
挪威郵輪提交復航計畫 %rU5
[[CDC]]給出復航可能性 %Ytl
股價稍有反彈 %BEh
[-]
相對航空、酒店業，受限最嚴，疫情打擊最大 %uZN
基本面永久損傷 %3X4

[[航空業]]
[+]
通關人數跳漲 %skY
[[CDC]]放鬆復航限制 %w9k
基本面普遍改善 %W7G
[-]
未來上漲潛力不多 %efR
競爭激烈的價格戰 %zT0
資本支出高 %Ygu
疫情永久改變商務旅行習慣 %DVI
碳排放的相關政策 %YGL
護城河淺 %WDm
營利有限 %52g
發展受限 %UlY

[[酒店業]]
[+]
疫情中仍有零星業務和大量融資 %6fp
[-]
股價已漲，限制未來上漲潛力 %104
護城河淺 %1BP
營利有限 %5V3
發展受限 %qsy
民宿業衝擊 %Tdk

$ABNB
[*]
[[互聯網]]平台 %BLD
不直接持有資產 %9R0
提供個性化住宿體驗 vs 傳統[[酒店業]]同一產品標準化 %mS1
新功能Experience提供除了住宿外的體驗服務 %vE6
[+]
具[[旅遊業]]各項利好優勢 %lx8
報復性消費看好 %MdS
不受商業旅行影響 <- 主要客群是家庭和個人 %USY
work from home的受益者 <- 白領邊工作邊度假 %YmK
長期發展潛力 %ifD
輕資產 %wAP
盈利能力強 %otK
疫情影響下靈活度高 %dJd
裁員降低支出 %Yfs
轉移至本地市場 %TqM
護城河極深 %jEw
議價能力強 %RZC
用戶多且忠誠度高 %WVR
口碑傳播獲得新客戶 %kFw
[未來發展]
個性化住宿發展到極致 %9Mw
[-]
估值過高 %2Tc
預計未來兩年仍無法營利 %gUU
面臨競爭：$BKNG, $EXPE 也加入民宿服務 %MEw
[?]<買><觀望> 旅遊業短期利好、長期投資的可能，若已布局其他旅遊業，可等估值回歸再做投資打算 %kDn"
`;

exports[`Create web card use real world sample 16`] = `
"[[美國大麻業]]
[現況]
美國[[大麻合法化]]期待高 %B4N
短期態度仍保守(政策風險) %6n1
有加拿大[[大麻合法化]]的前車之鑑 %iwb
某些州已獨立推行[[大麻合法化]]，等待聯邦法通過 %oOX
中國雲南已合法種植[[大麻]] %cUZ
行業內供大於求 <- 2018加拿大大麻合法化造成狂熱 %TQo
[發展預期]
投資者預期兩極 %uwV
看好發展潛力 %3ry
爭議巨大無法發展 %6Ag
業內人士預期保守 %C1B
黑市競爭 %WIr
配套不全 %KaF
相關行業發展緩慢 %QY0

$CGC
[*]
世界上最大的[[大麻]]公司 %HIT
總部於加拿大 %74n
[+]
創立時間早 %a1K
基本面相對穩定 vs 大麻行業普遍基本面糟糕，管理層混亂 %2Et
現金充裕，負債可控 %AkD
專業化管理團隊 %wxo
關閉產房、減少不必要成本 %26O
清晰的path to profit %U8W
最大股東$STZ提供經驗和渠道以發展大麻衍生品 %BOa
已和美國公司簽屬收購協議，等待合法化後保有美國市場優勢 %gIq
[-]
估值過高，P/S ratio 32倍 %JNC
進入美國市場後的行業競爭 %3DY

$CNSX:CURA
[_別稱] [[Curaleaf]] %oqL
[*]
美國本土四大大麻企業之一 %adK
市值最高 %LCe
農村包圍城市策略(從政策寬鬆的城市著手，再逐漸進攻市場大但監管嚴格城市) %qrc
垂直化發展：種植、加工、零售完整布局 %frL
[+]
利潤率遠超同行 %HxP
P/S ratio 20倍(合法化前僅能[[OTC]]場外交易) %3xo
合法化利好 %DqL
[vs]
$CGC %QF4
Curaleaf毛利率50% vs $CGC毛利率12% %8SY
[-]
單一市場 %F15
政策風險：合法化意外或推進速度慢 %S3G"
`;

exports[`Create web card use real world sample 17`] = `
"[[半導體]]
[*]
[[半導體]]產業具季節性 <- 需要芯片的各行業本身具季節性 eg 汽車夏季淡冬季旺 %5JR
Q1是淡季，但2021是最旺淡季 %vnj

$TSM
[+]
2021Q1營收新高，同比增長25.4%利潤增長19.4% %CP1
預估2021整年營收增長20% %AQ0
[[HPC]]芯片營收增長 %pAN
對沖智能手機淡季問題 %64z
未來逐漸超過智能手機芯片營收占比 %SzG
[[5G]]和[[HPC]]是未來趨勢 %QY6
[[HPC]]和汽車[[芯片]]為今年主力 %pvV
提升資本支出預算，擴展產能和加大科研(提前為未來3~4年產能準備) %c05
客戶未因產能滿載而找其他供應商，反而更加依賴 %W3z
護城河極高 %VOF
[[3奈米]]和[[5奈米]]技術領先 %4Op
[-]
財報公布後股價下跌 %SGT
2021Q1與2020Q4相比，營收只增長1.9% %2UT
2020下半年產能擠滿 %5yo
Q1淡季 %PLs
智能手機淡季將持續到Q2(智能手機芯片利潤率較家電和汽車高) %duL
科研費用增加 %dho
供應不足持續到2022 %8tn
Q1存貨周轉率增加 %2Cp
季節性問題，為下半年出貨準備 %0sW
高估值 %LR5
[[美聯儲]]放水，高估值不全然是泡沫 %H0C
半導體行業整體市盈率偏高，$TSM低於平均值 %qUC
[最新]
[[全球芯片缺乏]] %BUt
[[台灣缺水]] %DJ3
不影響產能，政府可能優先供水 %zPd
[?]<買>@114 支撐@113 支撐@108 %J7s"
`;

exports[`Create web card use real world sample 18`] = `
"$RBLX
[*]
[[遊戲平台]] %uLU
玩家充錢氪金，在平台上消費 %1uC
將會員時間換算獎金給開發者 %ht3
開銷目標：開發者 -> 科研維護 -> 推廣 %QMT
主要目標市場：小孩和青少年 %Xyg
2019和[[騰訊]]合作開發中國市場 %7gh
[vs]
$U %ltQ
$U [[遊戲引擎]]公司 vs $RBLX 有自己引擎， 遊戲只放在自己平台 %PUs
[CEO] David Baszucki：70%投票權 %hru
[+]
宣傳大多來自玩家本身 %61L
2020用戶年增長85%，營收年增長82%，營業現金流多4倍 %Pcf
會計方式遞延氪金收入，達到節稅、增加負債比例，滿足上市需求 %Q36
[-]
經濟重開，青少年降低遊戲時間 %D48
2021各項預估年增長降低 %1xy
上市時間遇市場殺高估值股 %EHJ
[關注]
Q2表現：與2020疫情爆發後比較 %Vo9
[?]<觀望> %jol


[[成長股]]
[*]
高風險產業 %U7d
[[新能源]] %3sg
[[電動車]] %blI
創新科技 %cIR
[[金融科技] %4aU
[[人工智能]] %77x
[[半導體]] %ZZ6
[[虛擬世界]] %dEu
[+]
[[互聯網]]和[[信息技術]]發展較為平穩 %6vA
[-]
今年增長放緩 %2Az
市場[[估值]]修正，淘汰沒有[[基本面]]的[[科技股]] %2e7
[選股條件]
護城河 %th5
潛在爆發 %ImF
符合未來發展趨勢 %oTa
估值是否過高 %6eN
[?]<多> 科技成長股整體長期看好 %L58"
`;

exports[`Create web card use real world sample 19`] = `
"$ADBE
[*]
核心業務：生產力工具 %NaX
市場：美洲 > 歐洲、中東、非洲 > 亞洲 %gDY
[+]
產品無法被競爭品取代 %CAZ
2021Q1運營效率、收入增速、利潤、營業現金流提升 %itO
明顯護城河 %aES
用戶黏性大 %aDm
客戶價格敏感低 %6nH
[-]
產品定價高 %TVr
產品門檻高，一般使用者不會使用 -> 市場可能趨向小眾 %nz9
[?]<買>@430 430=以最高點八折計算 以長期競爭力、護城河判斷未來增速，預測$ADBE未來5-10年以10%增速，故目前PE ratio 36倍算合理估值 %4i4"
`;

exports[`Create web card use real world sample 20`] = `
"[[美股暴跌]]
[原因]
美國[[十年國債]][[利率]]上升 %1UL
若在健康市場中意味經濟復甦 %nSm
當今[[美聯儲]][[量化寬鬆政策]]市場下，意味[[通膨]]擔憂 %ijF
回購市場中[[十年國債]]的借貸成本反常 %m5U
[[回購市場]]是金融流動體系的支撐，[[銀行]]間以[[國債]]作為抵押借款並給付[[利息]] %ZC9
負[[利息]]代表銀行大量作空[[十年國債]] -> 無法準時交還(隔夜市場的罰款低於利息) -> [[十年國債]]緊缺，秩序被破壞 -> [[美聯儲]]介入，大量出借[[十年國債]]，企圖恢復有借有還的秩序，並抬高[[回購市場]]利息 -> 反而加劇銀行做空[[國債]] %FLo"
`;

exports[`Create web card use real world sample 21`] = `
"[[十年國債利率]]
[最新]
2021/2/25[[七年國債]]拍賣會上投標量歷史新低 -> 投資者恐慌，拋售十年國債 -> 十年國債利率飆高 %UGv
[[十年國債]]先前做空率大增，抵押品稀缺 %SeR
2021/3/6[[三年國債]]投標量創2018以來新高 -> 減輕投資者對美國[[國債]]需求量降低的顧慮 %E8N
-> [[十年國債]]當季利率降低 -> 納指標高 %DmO
若2021/3/10[[十年國債]]拍賣的結果火熱，表示市場願意持有 -> 減少做空，銀行急於平倉 -> 降低利息 -> 股市利好 %MER
@作者 拍賣結果前加倉優質個股 %vNf"
`;

exports[`Create web card use real world sample 22`] = `
"[[木材業]]
[最新]
木托盤市場緊缺：現代物流中使用最廣；疫情爆發前木托盤每年需求量5-7%增長，疫情爆發後線上業務更刺激需求 -> 木托盤價格指數歷史新高 %ZRm
低利息導致房地產行情火爆 -> 北美廉價木材供不應求 %kPz
[+]
木材價格上漲至少持續到今年年底 #預測 %ODd
拜登[[基建計劃]]推出，[[木材]]股行情可能在今年年內持續走高 #預測 %XMO
[?]<買> 注意追高風險，建議分批低位建倉 %3Fo

$WY
[*]
全球最大林木產品公司之一 %p1z
2010考量稅務優惠問題，轉為[[不動產投資信託]]([[REITs]])形式 %v9q
2020美國500強排名457 %gBz
經營項目 %jH6
伐木49% %NsA
其他林地運用木材製品19% %NX7
紙漿23%：造紙、尿片材料 %UdZ
房地產開發9% %HRS
[+]
2020/3以來股價反彈 %QVe
拜登[[基建計劃]] %QqI
後疫情時代全球供應鏈復甦 %o0U
美國木材緊缺 %L0U
業績具長期增長潛力 %3EP
[?]<買> 逢低買入，長持到美聯儲縮表或加息以前 %Yey

$WFG
[*]
加拿大林業公司 %G6B
2021/2上市 %dT8
[最新]
2021/3月底股價飆升，上市以來股價上漲36.18% %rsQ

$PCH
[*]
不動產投資信託[[REITS]] %Sno
營運部門 %mWE
資源部門：樹木種植、伐木、道路建造急維護 %EHc
木製品部門：六家鋸木廠，生產及銷售木材、膠合板、其他木質副產品 %5lt
房地產部門：銷售非核心林地房地產 %qCe
[+]
股價2020/3觸底後持續走高，2021四月初上漲16.44% %Qcj
[-]
股價日K縣已偏離五日均線過高，隨時面臨回調 %48m
[?]<買> 等待股價回踩30日均線再建底倉 %d1U

$UFPI
[*]
1955創立 %Z1R
木質建材製造、加工、分銷商 %E0E
提供房屋建築用木製品、木包裝組件和包裝材料 %VjO
[+]
除2006-2011股價走弱外，其餘年份持續上漲 %f4z"
`;

exports[`Create web card use real world sample 23`] = `
"$NFLX
[最新]
[[$NFLX 2021第1季財報發布]] %3iJ
財報發布後，盤後股價下跌9% %wC8
付費用戶增速未達市場預期 <- 疫情影響電影拍攝 %V3B
公司預期下半表現將更為強勁 <- 熱門電影回歸 %YSi
[+]
[[流媒體]]取代傳統電視 %8DZ
[-]
競爭將更為激烈 %b5m
護城河不夠 %sDl

$FUTU
[+]
估值過高 %AqF
業績受股市週期性影響 %laX
[-]
宣布融資計劃後股價下跌 %ZHb
[?]<買> 在未來更低價格考慮買入，作為風險投資 %08Y

$AAPL
[最新]
路透社報導：2024開始生產乘用車、開發[[自動駕駛]]系統和突破性[[電池]]技術 %TLX
[+]
創新能力 %B5w
產品文化強 %iOx
商業模式優秀 %ePJ
[[巴菲特]]和[[段永平]]的重倉股 %L90
[?]<買>  在好的價格下重倉 %kWf



[[美國國債]]
[論點]
@[[Peter_Schiff]] 美國國債是龐式騙局 %WoB
美國以發行新債償還舊[[國債]]利息，本質與[[龐式騙局]]相同 %PeO
兩位數[[通脹]]的可能性，債券投資人都會被[[通脹]]殺死 %8XC
@作者 美元是全世界的強勢貨幣，幾乎壟斷，投資人沒有其他更好的選擇，目前持有美元資產並不擔心 %tqW

[[Peter Schiff]]
財經評論員"
`;

exports[`Create web card use real world sample 24`] = `
"[[拜登提議將美國富人資本利得稅提高至39.6%]]
[*]
[[拜登]]提議將年收入$100萬以上的人[[資本利得稅]]提高至39.6% %Jkp
另有[[歐巴馬]][[醫改]]相應的投資收益稅3.8% %Rat
原[[資本利得稅]]基本稅率20%(比勞動稅收低)，調漲稅率幾乎翻倍 %y6C
美國和加拿大發放救濟款 -> 財政迫切需要稅收 -> 自[[房地產]]和股票收益大的收稅 %Ilz
預期[[資本利得稅]]由處分時收稅改為按年徵收 %JC7
[影響]
消息傳出後，美股大盤跳水 <- [[美股]]以往長期牛市原因：上市公司賺錢後在市場上回購股票取代發放分紅，藉此提升股價，投資人資本利得稅負較獲配分紅稅負低，又或傾向長期持有 %Wnl
[[資本利得稅]]的提高和徵收方式改變 -> 改變美股長期持股邏輯(富人可能改為短線投資或每年報稅前減倉) %KwT
[受損]
企業稅負加重影響企業盈利能力 %Ch7
高風險低分紅的企業，如權重高的[[科技股]]面臨到更高稅率，影響所有投資人 %HGP
[受惠]
利好[[高股息股]]([[銀行]]、[[公用事業]]、[[能源]]) <- 股票上漲收益稅大於股息稅率 %xVS
[?]
[[資本利得稅]]和[[工資稅]]一樣，是否公平? %NeB
富人是否會選擇將永續派息的資產放入家族信託? %Gd5"
`;

exports[`Create web card use real world sample 25`] = `
"$NFLX
[*]
[[流媒體]] %8Kt
每月收費約相當一小時最低基本工資 %TSy
[+]
佔大部分[[尼爾森]]公布2020觀看最多的十大原創影片 %vhL
內容新且豐富 %9Sm
下半年會有大片上線 %cfu
[-]
2021第一季財報公布訂閱數的增長不如預期 %sy6
2020疫情訂閱增長透支 %DNa
疫情減少拍片，受到內容驅動的訂戶在2021增長受到限制 %E3O
[vs]
[[Disney+]] %uve
[[HBO]] %ug0
[?]<買> 流媒體市場還很大，逢暴跌是開倉機會 %2GC

$DIS
[*]
[[流媒體]]概念股：[[Disney+]] [[HULU]] %456
[[疫情復甦股]]：[[迪士尼樂園]] %9lw
[+]
具[[風險對沖]]的業務多樣性 %PF8
[[Disney+]]和[[HULU]]訂戶合計超過1億 %MQY
歷史悠久的影視製作經驗和內容庫 %Ufr
預計2024實現新的利潤增長點 %oPs
[vs]
$NFLX %nvk
觀眾年齡層次和口味多樣化，有細分市場差異 -> 訂戶可能同時訂閱[[Disney+]]和$NFLX %jfs
[?]<買> 值得長期擁有 %QzE

$FUBO
[*]
體育項目[[流媒體]] %XZL
轉播體育賽事 %vUq
[-]
為了買轉播權必須不斷投入 %zwW
轉播賽事因具時效性而無法成為庫存 %05L
市值小，抗風險能力弱 %2YQ

$ROKU
[*]
[[流媒體]]的終端設備商 %80A
協助推廣訂閱，分潤訂閱費 %8pv
[+]
天然壁壘 <- 用戶置換成本高 %YiQ
[[ARK]]看好 %tjS"
`;

exports[`Create web card use real world sample 26`] = `
"[[美股]]
[?]@[[Bill Miller]] <多> 標普在2021Q1上漲5.7%後牛市持續，市場將繼續走高 %XgM
不擔心長期利率的提升趨勢會持續下去，從而造成估值壓力
不擔心通脹
擔心市場漲的太高太快，削弱多數股票的吸引力
多數股票現處樂觀階段(成長中)
少數股票屬於狂歡(萎縮中)
疫情
- 易感染族群已接種疫苗，疫情危險逐漸退卻
- 大多數人預計今年回歸常態
$BTC
- 並非泡沫，而是納入主流的開始
- 視為數字黃金
- @作者 美元已和黃金脫鉤，各國瘋狂印鈔，因而不信任傳統貨幣
[[FED]]
- 已知[[美聯儲]]認為更多[[寬鬆]]不可少，除非經濟充分就業，且[[通膨]]長期高於2%下才考慮收縮 -> [[美聯儲]]過度[[緊縮]]而毀掉牛市的可能性非常遙遠
經濟強勢增漲，企業盈利和現金流也會上漲、超過預期，股市肯定還會得到很強的支撐
}} {{@作者 重個股，輕大盤，長期看來股價是由基本面決定}}

[[Bill Miller]]
價值投資者
管理基金在美國所有大盤核心基金中排名第一名
管理資產超過$200億
[投資組合]
分散投資，僅有一支股票持股超過5% {{@作者 跑贏大盤不能太過分散，看中各股後買跌不買漲}} %0qN
科技股包含$AMZN $FB $BABA $GOOGL %sKa"
`;

exports[`Create web card use real world sample 27`] = `
"$PTON
[-]
[[疫情受益股]]，經濟復甦下造成一月股價下跌 %ybJ
[?]<觀望> 長期看好，持續持有 %jUZ

$LMND
[+]
財報透露未來發展新的[[保險]]領域(@作者 可能是汽車保險) %oIT
[?]<買> 股價下跌是加倉機會 %Mnl

$NIO
[+]
財報透露乘車毛利達17% %c6a
[?]<買> %lDG

$DMTK
[*]
小市值[[成長型公司]] %vz4
非入侵式的皮膚科相關診斷方式和[[基因檢測]]技術，準確率99% %mB3
[vs]
傳統活體檢測 %6tS
傳統檢測方式準確率僅有83% %3I6
出現病理變化才會進行傳統檢測 vs $DMTK技術能提前發現 %z77
[+]
經濟復甦下尚未被市場完全pricing的受益股 %eRs
產品覆蓋達$100億市場 %5xA
對於相關者會是更好的選擇 %3Jv
患者提前發現 %zst
醫師工作量減輕 %FFL
保險公司提供檢測，降低理賠風險 %Obe
NCCN(美國國家綜和癌症網絡)將$DMTK其中一項技術加入指導方針 %Gpu
與各州保險公司合作 %TX1
美國疫情解禁後，皮膚科看診人數可能增加 -> 增加線下銷售 %32Z
[-]
大盤震盪股價回調 %q4L
[?]<買> 趁股價回調加倉 %6rQ"
`;

exports[`Create web card use real world sample 28`] = `
"[[$PFE宣布研發中疫苗90%有效]]
[影響]
[[傳統股]]股價跳空反彈，但一天後回調 %IuI
[[旅遊股]]一天內漲幅超過30% %0TI
[[科技股]]([[疫情受惠股]])跳水，個別股票跌幅20%，但一天後反彈 %fC1
[?]
是否該多加受益於疫苗的[[傳統股]]? %tA6
[[旅遊]]業產品產品不可放入庫存，未營業就100%損失，且有銷售上限(座位、客房有限) -> 未來仍無法彌補疫情期間的損失 %4Nr
疫情期間增加負債，高利息影響利潤率，盈利能力和股價仍需要很長時間才能回到疫情前的水準 %itv
[[餐飲]]業如$SBUX, $MCD，或[[零售]]業如$TPR，這些[[傳統股]]的股價多數已反彈 %xIB
@作者 即使有對疫苗和經濟開放的期待，仍不建議追高或重倉 %8cc
是否該拋棄[[科技股]]? %2xI
$TSLA：未受疫情影響 %d2s
$FB：經濟開放後可能減少人花在[[社交媒體]]上時間，但同時受益公司會加大廣告力度 -> $FB營利反而提高 %Of7
$SWKS, $QCOM：隨[[5G]]發展，[[芯片]]需求將會更大 %JgR
$NVDA, $AMD：透過合併其他公司，加強在[[數據中心]]和[[AI]]領域的技術和影響力，高估值是反映未來該領域的發展潛力 %Aah
[[電商]]$AMZN, $SHOP, $SE, $MELI：[[網路購物]]趨勢不會變，疫苗消息對股價的打壓是過激反應，反而是加倉機會 %0NP

$PTON
[*]
[[居家健身]] %SE7
目標族群是參加有氧課程的人 %UZZ
[-]
受疫苗消息打擊，股價一度從最高點跌了30%以上 %TjQ
[+]
居家健身仍是未來趨勢 <- 對目標族群來說，居家健身節省很多時間，且可以自由安排時間 %2SY
[?]<觀望> 對產業不夠了解 %lpI"
`;

exports[`Create web card use real world sample 29`] = `
"$IPOE
[*]
[[SPAC]] %Pje
預計合併對象：[[SoFi]]，合併日未定 %a8K
[?]<買> 看好[[SoFi]]，但對投資$IPOE仍要小心合併失敗風險 %VAg

[[SoFi]]
[*]
[[Social Finance]] %k1q
2011創立，資金來源是史丹佛校友提供 %iMJ
[業務]
本來的業務是線上[[學生貸款]][[轉貸]]：以較市場低的利率放貸給史丹佛的學生([[P2P]]的[[貸款]]業務) %koP
衍伸業務涵蓋一般商銀的[[個人金融業務]] %hk3
居於中間人：連接銀行、清算公司和終端消費者，以收取交易服務費 %YOo
提供金融相關的基礎建設給其他[[fintech]]公司 %1al
[最新]
2021/3宣布併購區域性銀行 %IpB
預計與[[SPAC]]$IPOE合併上市，合併日未定 %nis
[+]
和其他[[金融科技]]公司相比，產品線完整許多 %98E
併購區域性銀行後，加速銀行牌照申請 -> 瓜分銀行本體業務(金融服務) -> 可直接賺取存貸利差 -> 幫助獲利成長 %GUZ
會員人數維持高度增長 %w0M
大環境的[數位錢包]]趨勢快速成長 %MDd
一站式服務 -> 會員黏著度高 -> 有效提高會員單位營收貢獻 %Ti6
[-]
超過80%營收來自[[貸款]]相關業務，但美國持續處低[[利率]] %P1x
[[SoFi]]宣稱2021會員可帶來交叉銷售，提高[[金融服務]]和[[金融基礎建設]]的收入比重 %fQi
競爭激烈 %eXR
$PYPL, $SQ為市場領導者 %5eW
投資平台[[robin hood]]、[[eToro]]最近也要上市 %mEa
[?]
[[SoFi]]是否能靠以貸款為基礎的生態圈突破重圍? %75R
[vs]
[[Cash App]]、[[Venmo]] %NEB
[[SoFi]]商業模式聚焦在提供個人[[金融服務]]的封閉圈{{以會員為中心，完整的金融商品如：房貸、信貸、車貸、信用卡、存款、投資}} %Z4y
$SQ %pTW
[[SoFi]]和$SQ的商業模式相像，都以創造封閉式生態提高會員黏著度，也都朝[[數位銀行]]發展 %X4b
目標市場有些許差別：$SQ以小企業金融服務為主 vs [[SoFi]]以個人金融服務為主 %mUJ
規模：$SQ會員人數6,000萬人 vs [[SoFi]]180萬 %ANi
管理層：$SQ的Jack Dorsey ($TWTR的CEO) vs [[SoFi]]的Anthony Noto ($TWTR的前COO) %KPg
[?] <多> [[SoFi]]但對投資$IPOE仍要小心合併失敗風險 %Euq"
`;

exports[`Real world sample to create web card 1`] = `
"$CC
[?] <BUY> @30 %Glo
[+]
111 111 %KEt
222 222 %BKQ

$DD
[?] <SELL> @30 %5zx"
`;

exports[`Real world sample to create web card 2`] = `
Object {
  "0": Object {
    "anchorId": 17,
    "createrId": "test-user-2",
    "linenumber": 1,
    "marker": Object {
      "key": "[?]",
      "value": "<BUY> @30",
    },
    "neatReply": true,
    "nestedCard": Object {
      "symbol": "$CC",
    },
    "oauthor": "test-oauthor-1",
    "pollChoices": Array [
      "<BUY>",
    ],
    "replyId": 3,
    "src": "http://test2.com",
    "stampId": "%Glo",
    "str": " <BUY> @30",
  },
  "1": Object {
    "anchorId": 18,
    "createrId": "test-user-2",
    "linenumber": 3,
    "marker": Object {
      "key": "[+]",
      "value": "111 111",
    },
    "nestedCard": Object {
      "symbol": "$CC",
    },
    "oauthor": "test-oauthor-1",
    "src": "http://test2.com",
    "stampId": "%KEt",
    "str": "111 111",
  },
  "2": Object {
    "anchorId": 19,
    "createrId": "test-user-2",
    "linenumber": 4,
    "marker": Object {
      "key": "[+]",
      "value": "222 222",
    },
    "nestedCard": Object {
      "symbol": "$CC",
    },
    "oauthor": "test-oauthor-1",
    "src": "http://test2.com",
    "stampId": "%BKQ",
    "str": "222 222",
  },
  "3": Object {
    "anchorId": 20,
    "createrId": "test-user-2",
    "linenumber": 7,
    "marker": Object {
      "key": "[?]",
      "value": "<SELL> @30",
    },
    "neatReply": true,
    "nestedCard": Object {
      "symbol": "$DD",
    },
    "oauthor": "test-oauthor-1",
    "pollChoices": Array [
      "<SELL>",
    ],
    "replyId": 4,
    "src": "http://test2.com",
    "stampId": "%5zx",
    "str": " <SELL> @30",
  },
}
`;

exports[`Real world sample to create web card 3`] = `
"[~]
[?]
<BUY> <SELL> %MQk
[+]
222 222 %e2h
111 111 %UVA
222 222 %jML
111 111 %Xos
[-]

"
`;

exports[`Real world sample to create web card 4`] = `
Object {
  "0": Object {
    "anchorId": 7,
    "commentId": 5,
    "createrId": "bot",
    "linenumber": 2,
    "marker": Object {
      "key": "[?]",
      "value": "<BUY> <SELL>",
    },
    "poll": true,
    "pollChoices": Array [
      "<BUY>",
      "<SELL>",
    ],
    "pollId": 2,
    "stampId": "%MQk",
    "str": "<BUY> <SELL> %MQk",
  },
  "1": Object {
    "anchorId": 15,
    "createrId": "test-user-2",
    "linenumber": 4,
    "marker": Object {
      "key": "[+]",
      "value": "222 222",
    },
    "oauthor": "test-oauthor-1",
    "src": "http://test2.com",
    "srcStamp": "%BKQ",
    "stampId": "%e2h",
    "str": "222 222 %e2h",
  },
  "2": Object {
    "anchorId": 16,
    "createrId": "test-user-2",
    "linenumber": 5,
    "marker": Object {
      "key": "[+]",
      "value": "111 111",
    },
    "oauthor": "test-oauthor-1",
    "src": "http://test2.com",
    "srcStamp": "%KEt",
    "stampId": "%UVA",
    "str": "111 111 %UVA",
  },
  "3": Object {
    "anchorId": 8,
    "createrId": "test-user-2",
    "linenumber": 6,
    "marker": Object {
      "key": "[+]",
      "value": "222 222",
    },
    "oauthor": "test-oauthor-1",
    "src": "http://test2.com",
    "srcStamp": "%AOO",
    "stampId": "%jML",
    "str": "222 222 %jML",
  },
  "4": Object {
    "anchorId": 9,
    "createrId": "test-user-2",
    "linenumber": 7,
    "marker": Object {
      "key": "[+]",
      "value": "111 111",
    },
    "oauthor": "test-oauthor-1",
    "src": "http://test2.com",
    "srcStamp": "%lHH",
    "stampId": "%Xos",
    "str": "111 111 %Xos",
  },
}
`;

exports[`Real world sample to create web card 5`] = `
"[~]
[?]
<BUY> <SELL> %56k
[+]
[-]"
`;

exports[`Real world sample to create web card 6`] = `
Object {
  "0": Object {
    "anchorId": 10,
    "commentId": 7,
    "createrId": "bot",
    "linenumber": 2,
    "marker": Object {
      "key": "[?]",
      "value": "<BUY> <SELL>",
    },
    "poll": true,
    "pollChoices": Array [
      "<BUY>",
      "<SELL>",
    ],
    "pollId": 3,
    "stampId": "%56k",
    "str": "<BUY> <SELL> %56k",
  },
}
`;

exports[`create a nested web-card 1`] = `
"$CC
[?] <BUY> @30 %ts7
[+]
111 111 %LMY
222 222 %dif

$DD
[?] <SELL> @30 %AV3"
`;

exports[`create a nested web-card 2`] = `
Object {
  "0": Object {
    "anchorId": 11,
    "createrId": "test-user-2",
    "linenumber": 1,
    "marker": Object {
      "key": "[?]",
      "value": "<BUY> @30",
    },
    "neatReply": true,
    "nestedCard": Object {
      "symbol": "$CC",
    },
    "oauthor": "test-oauthor-1",
    "pollChoices": Array [
      "<BUY>",
    ],
    "replyId": 1,
    "src": "http://test2.com",
    "stampId": "%ts7",
    "str": " <BUY> @30",
  },
  "1": Object {
    "anchorId": 12,
    "createrId": "test-user-2",
    "linenumber": 3,
    "marker": Object {
      "key": "[+]",
      "value": "111 111",
    },
    "nestedCard": Object {
      "symbol": "$CC",
    },
    "oauthor": "test-oauthor-1",
    "src": "http://test2.com",
    "stampId": "%LMY",
    "str": "111 111",
  },
  "2": Object {
    "anchorId": 13,
    "createrId": "test-user-2",
    "linenumber": 4,
    "marker": Object {
      "key": "[+]",
      "value": "222 222",
    },
    "nestedCard": Object {
      "symbol": "$CC",
    },
    "oauthor": "test-oauthor-1",
    "src": "http://test2.com",
    "stampId": "%dif",
    "str": "222 222",
  },
  "3": Object {
    "anchorId": 14,
    "createrId": "test-user-2",
    "linenumber": 7,
    "marker": Object {
      "key": "[?]",
      "value": "<SELL> @30",
    },
    "neatReply": true,
    "nestedCard": Object {
      "symbol": "$DD",
    },
    "oauthor": "test-oauthor-1",
    "pollChoices": Array [
      "<SELL>",
    ],
    "replyId": 2,
    "src": "http://test2.com",
    "stampId": "%AV3",
    "str": " <SELL> @30",
  },
}
`;

exports[`create a nested web-card 3`] = `
"[~]
[?]
<BUY> <SELL> %fNP
[+]
222 222 %o5W
111 111 %fOH
[-]
"
`;

exports[`create a nested web-card 4`] = `
Object {
  "0": Object {
    "anchorId": 7,
    "commentId": 5,
    "createrId": "bot",
    "linenumber": 2,
    "marker": Object {
      "key": "[?]",
      "value": "<BUY> <SELL>",
    },
    "poll": true,
    "pollChoices": Array [
      "<BUY>",
      "<SELL>",
    ],
    "pollId": 2,
    "stampId": "%fNP",
    "str": "<BUY> <SELL> %fNP",
  },
  "1": Object {
    "anchorId": 8,
    "createrId": "test-user-2",
    "linenumber": 4,
    "marker": Object {
      "key": "[+]",
      "value": "222 222",
    },
    "oauthor": "test-oauthor-1",
    "src": "http://test2.com",
    "srcStamp": "%dif",
    "stampId": "%o5W",
    "str": "222 222 %o5W",
  },
  "2": Object {
    "anchorId": 9,
    "createrId": "test-user-2",
    "linenumber": 5,
    "marker": Object {
      "key": "[+]",
      "value": "111 111",
    },
    "oauthor": "test-oauthor-1",
    "src": "http://test2.com",
    "srcStamp": "%LMY",
    "stampId": "%fOH",
    "str": "111 111 %fOH",
  },
}
`;

exports[`create a nested web-card 5`] = `
"[~]
[?]
<BUY> <SELL> %ViF
[+]
[-]"
`;

exports[`create a nested web-card 6`] = `
Object {
  "0": Object {
    "anchorId": 10,
    "commentId": 7,
    "createrId": "bot",
    "linenumber": 2,
    "marker": Object {
      "key": "[?]",
      "value": "<BUY> <SELL>",
    },
    "poll": true,
    "pollChoices": Array [
      "<BUY>",
      "<SELL>",
    ],
    "pollId": 3,
    "stampId": "%ViF",
    "str": "<BUY> <SELL> %ViF",
  },
}
`;

exports[`create a symbol card body 1`] = `
Object {
  "body": Object {
    "id": 3,
    "meta": Array [
      Object {
        "anchorId": 2,
        "createrId": "test-user-1",
        "linenumber": 0,
        "marker": Object {
          "key": "[?]",
          "value": "<BUY> @30",
        },
        "neatReply": true,
        "pollChoices": Array [
          "<BUY>",
        ],
        "stampId": "%l1w",
        "str": " <BUY> @30",
      },
      Object {
        "anchorId": 3,
        "createrId": "test-user-1",
        "linenumber": 2,
        "marker": Object {
          "key": "[+]",
          "value": "111 111",
        },
        "stampId": "%T06",
        "str": "111 111",
      },
      Object {
        "anchorId": 4,
        "createrId": "test-user-1",
        "linenumber": 3,
        "marker": Object {
          "key": "[+]",
          "value": "222 222",
        },
        "stampId": "%gzO",
        "str": "222 222",
      },
    ],
    "prevId": 2,
    "text": "[?] <BUY> @30 %l1w
[+]
111 111 %T06
222 222 %gzO",
    "userId": "test-user-1",
  },
  "bodyId": 3,
  "id": 1,
  "linkUrl": "//$AA",
  "meta": Object {
    "commentId": 2,
    "symbol": "$AA",
  },
  "template": "TICKER",
}
`;

exports[`edit a web card 1`] = `
Object {
  "body": Object {
    "id": 6,
    "meta": Array [
      Object {
        "anchorId": 5,
        "createrId": "test-user-1",
        "linenumber": 1,
        "marker": Object {
          "key": "[*]",
          "value": "2021年會有進一步財政刺激",
        },
        "stampId": "%lWZ",
        "str": "2021年會有進一步財政刺激",
      },
      Object {
        "anchorId": 6,
        "createrId": "test-user-1",
        "linenumber": 2,
        "marker": Object {
          "key": "[*]",
          "value": "歷年有1月效應，1月份呈現反彈，但不認為",
        },
        "stampId": "%5Md",
        "str": "歷年有1月效應，1月份呈現反彈，但不認為",
      },
    ],
    "prevId": 5,
    "text": "[*]
2021年會有進一步財政刺激 %lWZ
歷年有1月效應，1月份呈現反彈，但不認為 %5Md",
    "userId": "test-user-1",
  },
  "bodyId": 6,
  "id": 2,
  "linkUrl": "http://test1.com",
  "meta": Object {
    "commentId": 3,
  },
  "template": "WEBPAGE",
}
`;
